tests/baselines/reference/tsxElementResolution4.errors.txt
tests/cases/conformance/jsx/file.tsx(16,1): error TS2324: Property 'm' is missing in type '{ m: string; }'.
tests/cases/conformance/jsx/file.tsx(16,7): error TS2339: Property 'q' does not exist on type '{ m: string; }'.


==== tests/cases/conformance/jsx/file.tsx (2 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    	    div: { n: string; };
    	    span: { m: string; };
    	}
    }
    
    // OK
    <div n='x' />;
    
    // OK
    <span m='ok' />;
    
    // Error
    <span q='' />;
    ~~~~~~~~~~~~~
!!! error TS2324: Property 'm' is missing in type '{ m: string; }'.
          ~
!!! error TS2339: Property 'q' does not exist on type '{ m: string; }'.
    